tests/paczka1/fuzzy1/28786193.err
Error in line 1: CN8TEtkbu S154 30,0
Error in line 12: QXXC4E A407 25,1
Error in line 26: bulTFzmImF S236 17,4
